# my-rust-k8s-test

./: .gitignore  Cargo.toml  output.txt  readme.md
src/: main.rs
