[package]
name = "my-rust-k8s-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
k8s-openapi = { version = "0.18.0", features = ["v1_20"] }
kube = "0.82.2"
tokio = { version = "1.28.0", features = ["full"] }
